--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,15 +16,19 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        jdk: [11, 17]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: ${{ matrix.jdk }}
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
